--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <canvas id="main"></canvas>
     <script src="fps.js"></script>
+    <script src="mobile-check.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
